--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,10 +12,17 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # semantic permissions
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
