--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,10 +2,12 @@ name: Publish Docker Image
 
 on:
   push:
-    branches: ['main']
-  
+    branches:
+      - main
+      - "**" # all branches to include feature branches
+
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
   workflow_dispatch:
 
@@ -13,20 +15,28 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     permissions:
-      contents: write   # semantic permissions
+      contents: write # semantic permissions
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # semantic-release needs the full commit history
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
+        id: semantic # Need an `id` for output variables
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/changelog
             @semantic-release/git
+
+      - name: New release?
+        if: steps.semantic.outputs.new_release_published == 'true'
+        run: |
+          echo "Releasing new version: ${{ steps.semantic.outputs.new_release_version }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,9 +50,27 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # create following tags: my-branch-name, v1, v1.2, v1.2.3, latest (if on default branch)
+      - name: Docker tags
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
+          tags: |
+            type=ref,event=branch
+
+            type=semver,pattern={{version}},value=${{ steps.semantic.outputs.new_release_version }},enable=${{ steps.semantic.outputs.new_release_published == 'true' }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ steps.semantic.outputs.new_release_version }},enable=${{ steps.semantic.outputs.new_release_published == 'true' }}
+            type=semver,pattern={{major}},value=${{ steps.semantic.outputs.new_release_version }},enable=${{ steps.semantic.outputs.new_release_published == 'true' }}
+
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build and push
+        if: steps.meta.outputs.tags != ''
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
+          push: ${{ github.event_name == 'push' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
