--- a/.github/workflows/security-scan-on-tag.yaml
+++ b/.github/workflows/security-scan-on-tag.yaml
@@ -33,12 +33,12 @@ jobs:
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.DOCKER_IMAGE_PATH }}
+          image-ref: ${{ env.DOCKER_IMAGE_TO_SCAN }}
           format: "sarif"
           output: "trivy-results.sarif"
           exit-code: "1"
           severity: "CRITICAL,HIGH"
-          scanners: "vuln,secret,config"
+          scanners: "vuln,secret,misconfig"
 
       - name: Upload Trivy SARIF results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
@@ -50,7 +50,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: ${{ env.DOCKER_IMAGE_PATH }}
+          image: ${{ env.DOCKER_IMAGE_TO_SCAN }}
           args: --severity-threshold=high --file=Dockerfile --sarif-output=snyk-results.sarif --project-name=${{ github.event.repository.name }}
 
       - name: Upload Snyk SARIF results to GitHub Security tab
