fix(ci): always run scan and reports jobs

--- a/.github/workflows/security-scan-on-tag.yaml
+++ b/.github/workflows/security-scan-on-tag.yaml
@@ -31,6 +31,7 @@ jobs:
           fail_on_error: true
 
       - name: Run Trivy vulnerability scan
+        if: ${{ always() }}
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.DOCKER_IMAGE_TO_SCAN }}
@@ -41,11 +42,13 @@ jobs:
           scanners: "vuln,secret,misconfig"
 
       - name: Upload Trivy SARIF results to GitHub Security tab
+        if: ${{ always() }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-results.sarif"
 
       - name: Run Snyk container scan
+        if: ${{ always() }}
         uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -54,6 +57,7 @@ jobs:
           args: --severity-threshold=high --file=Dockerfile --sarif-output=snyk-results.sarif --project-name=${{ github.event.repository.name }}
 
       - name: Upload Snyk SARIF results to GitHub Security tab
+        if: ${{ always() }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "snyk-results.sarif"
